Algunos cambios de estructura

--- a/public/css/dashboardClient.css
+++ b/public/css/dashboardClient.css
@@ -188,6 +188,8 @@ body{
     border-radius: 1em;
     gap: 2px;
     width: 20em;
+    cursor: pointer;
+    user-select: none;
 }
 
 .categories .category img{
