--- a/public/css/dashboardClient.css
+++ b/public/css/dashboardClient.css
@@ -155,6 +155,10 @@ body{
     grid-template-rows: 7em 8em 15em 1fr;
 }
 
+.showDishes .offers{
+    position: relative;
+}
+
 .showDishes .offers img{
     width: 100%;
     height: 7em;
